[gd_scene load_steps=7 format=3 uid="uid://os8oufbo8jf3"]

[ext_resource type="Script" uid="uid://c827licxjedbw" path="res://personaje_principal2.gd" id="1_q41jy"]
[ext_resource type="Texture2D" uid="uid://bpvrgim0s7uoa" path="res://Sprites/abajo-250x250-0002.png" id="2_l23do"]
[ext_resource type="Texture2D" uid="uid://d0pm664b6g3nb" path="res://Sprites/Sprite-0001.png" id="3_dt5du"]

[sub_resource type="SpriteFrames" id="SpriteFrames_aelx1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_l23do")
}],
"loop": true,
"name": &"Agachar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dt5du")
}],
"loop": true,
"name": &"Saltar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dt5du")
}],
"loop": true,
"name": &"reposo",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ib0aq"]
size = Vector2(52, 232)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q41jy"]
size = Vector2(52, 232)

[node name="Personaje_Principal" type="CharacterBody2D"]
script = ExtResource("1_q41jy")
metadata/_edit_group_ = true

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aelx1")
animation = &"reposo"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 3)
shape = SubResource("RectangleShape2D_ib0aq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-7, 3)
shape = SubResource("RectangleShape2D_q41jy")

[connection signal="body_entered" from="Area2D" to="." method="_on_dinosaour_colision"]
